araqne-webconsole/src/main/resources/WEB-INF/test/layoutEngine/layoutEngine.css
/* @import url('normalize.css'); */
/* General Demo Style */
* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

body, #main {
	background: #ddd;
	-webkit-font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	font-smoothing: antialiased;
	margin: 0;

	overflow-x: hidden;
	/* overflow: hidden; */
}
/*
#main {
	position: relative;
	margin: 0 auto;
	-webkit-perspective: 2200px;
	-moz-perspective: 2200px;
	perspective: 2200px;
}
*/
.k-d-row{
	border: 0px solid transparent;
	position: relative;
}

.k-d-col{
	/* border-top: 1px solid #dadada; */
	border: 0px solid #dadada;
	float: left;
	/* padding: 20px;
	overflow: hidden; */
	position: relative;
	background: #fff;
}

.w-25{ width: 25%; }
.w-30{ width: 30%; }
.w-40{ width: 40%; }
.w-50{ width: 50%; }
.w-60{ width: 60%; }
.w-70{ width: 70%; }
.w-75{ width: 75%; }
.w-100{ width: 100%; }

.h-25{ height: 25%; }
.h-30{ height: 30%; }
.h-40{ height: 40%; }
.h-50{ height: 50%; }
.h-60{ height: 60%; }
.h-70{ height: 70%; }
.h-75{ height: 75%; }
.h-100{ height: 100%; }

.box-b-r{
	border-right: 1px solid #dadada;
}
.box-b-l{
	border-left: 1px solid #dadada;
}



html, body, .k-d-col, #main {
	height: 100%;
}


@media screen and (max-width: 760px){

}
@media screen and (max-width: 690px){

}





.k-rs-r {
	background-color: rgba(0,0,0,.4);
	width: 15px;
	height: 100%;
	right: -5px;
	top: 0;
	position: absolute;
	cursor: w-resize;
	z-index: 9999;
}

.k-rs-b {
	background-color: rgba(0,0,0,.4);
	width: 100%;
	height: 15px;
	bottom: -5px;
	left: 0;
	position: absolute;
	z-index: 1000;
	cursor: s-resize;
	z-index: 9999;

}

.k-rs-r:hover, .k-rs-b:hover {
	
}

.grabbed {
	/*
	-webkit-transform: scale(0.95);
	transform: scale(0.95);
	*/
	opacity: .8;
}

/*
.movable {
	position: absolute;
	z-index: 8000;
}
*/

.stepright {
	-webkit-transform: translateX(50px) scale(1);
	-webkit-transition-duration: .1s;
	transition-duration: .1s;
}

.stepleft {
	-webkit-transform: translateX(-50px) scale(1);
	-webkit-transition-duration: .1s;
	transition-duration: .1s;
}

.ani {
	-webkit-transition-duration: .2s;
	transition-duration: .2s;
}

